@@ -2,6 +2,7 @@ package vn.iostar.postservice.service.impl;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -38,7 +39,8 @@ import java.time.temporal.ChronoUnit;
 import java.util.*;
 
 @Service
-public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
+@RequiredArgsConstructor
+public class ShareServiceImpl implements ShareService {
 
     private final ShareRepository shareRepository;
     private final PostService postService;
@@ -48,18 +50,6 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
     private final CommentRepository commentRepository;
     private final LikeRepository likeRepository;
     private final FriendClientService friendClientService;
-
-    public ShareServiceImpl(RedisTemplate<String, Object> redisTemplate, ShareRepository shareRepository, PostService postService, JwtService jwtService, UserClientService userClientService, GroupClientService groupClientService, CommentRepository commentRepository, LikeRepository likeRepository, FriendClientService friendClientService) {
-        super(redisTemplate);
-        this.shareRepository = shareRepository;
-        this.postService = postService;
-        this.jwtService = jwtService;
-        this.userClientService = userClientService;
-        this.groupClientService = groupClientService;
-        this.commentRepository = commentRepository;
-        this.likeRepository = likeRepository;
-        this.friendClientService = friendClientService;
-    }
 
     @Override
     public <S extends Share> S save(S entity) {
@@ -83,7 +73,6 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             return ResponseEntity.badRequest().body("Post not found");
 
         GroupProfileResponse postGroup = null;
-        UserProfileResponse userProfileResponse = userClientService.getUser(userId);
 
         String shareId = UUID.randomUUID().toString();
         Share share = new Share();
@@ -95,19 +84,15 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
         share.setUserId(user.getUserId());
         share.setPrivacyLevel(requestDTO.getPrivacyLevel());
         if (requestDTO.getPostGroupId() != null)
-            if (requestDTO.getPostGroupId() != "" && requestDTO.getPostGroupId() != null && Integer.valueOf(requestDTO.getPostGroupId()) != 0) {
+            if (!requestDTO.getPostGroupId().isEmpty() ) {
                 postGroup = groupClientService.getGroup(requestDTO.getPostGroupId());
             if (postGroup != null) {
                 share.setPostGroupId(postGroup.getId());
             }
-
         }
         save(share);
-        if (this.exists("sharesOfTimeLine")) this.delete("sharesOfTimeLine");
-        if (this.exists("sharesOfUser")) this.delete("sharesOfUser");
-        if (this.exists("sharesOfGroup")) this.delete("sharesOfGroup");
-        if (this.exists("sharesOfGroupJoin")) this.delete("sharesOfGroupJoin");
-        SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, postGroup);
+        UserProfileResponse ownerPost = userClientService.getUser(post.get().getUserId());
+        SharesResponse sharesResponse = new SharesResponse(share, user,ownerPost, postGroup);
         GenericResponse response = GenericResponse.builder().success(true).message("Share Post Successfully")
                 .result(sharesResponse).statusCode(200).build();
 
@@ -124,20 +109,16 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
         Share share = shareOp.get();
         share.setContent(requestDTO.getContent());
         share.setPrivacyLevel(requestDTO.getPrivacyLevel());
-        System.out.println(requestDTO.getPostGroupId());
-        if (requestDTO.getPostGroupId() != null && requestDTO.getPostGroupId().equals(null)) {
-            if (requestDTO.getPostGroupId() != "" && requestDTO.getPostGroupId() != null && Integer.valueOf(requestDTO.getPostGroupId()) != 0){
+        if (requestDTO.getPostGroupId() != null && requestDTO.getPostGroupId().isEmpty()) {
+            if (!Objects.equals(requestDTO.getPostGroupId(), "")
+                    && Integer.parseInt(requestDTO.getPostGroupId()) != 0){
                 GroupProfileResponse groupProfileResponse = groupClientService.getGroup(requestDTO.getPostGroupId());
                 if (groupProfileResponse != null)
                     share.setPostGroupId(groupProfileResponse.getId());
             }
         }
-        share.setUpdateAt(requestDTO.getUpdateAt());
+        share.setUpdateAt(new Date());
         save(share);
-        if (this.exists("sharesOfTimeLine")) this.delete("sharesOfTimeLine");
-        if (this.exists("sharesOfUser")) this.delete("sharesOfUser");
-        if (this.exists("sharesOfGroup")) this.delete("sharesOfGroup");
-        if (this.exists("sharesOfGroupJoin")) this.delete("sharesOfGroupJoin");
         return ResponseEntity.ok(GenericResponse.builder().success(true).message("Update successful").result(null)
                 .statusCode(200).build());
     }
@@ -149,7 +130,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
         String currentUserId = jwtService.extractUserId(jwt);
         if (!currentUserId.equals(userId.replaceAll("^\"|\"$", ""))) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new GenericResponse(false, "Delete denied!", null, HttpStatus.NOT_FOUND.value()));
+                    .body(new GenericResponse(false, "Delete denied!", null,
+                            HttpStatus.NOT_FOUND.value()));
         }
 
         Optional<Share> optionalShare = findById(shareId);
@@ -171,23 +153,31 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             share.setComments(new ArrayList<>());
             share.setLikes(new ArrayList<>());
             shareRepository.delete(share);
-            if (this.exists("sharesOfTimeLine")) this.delete("sharesOfTimeLine");
-            if (this.exists("sharesOfUser")) this.delete("sharesOfUser");
-            if (this.exists("sharesOfGroup")) this.delete("sharesOfGroup");
-            if (this.exists("sharesOfGroupJoin")) this.delete("sharesOfGroupJoin");
             return ResponseEntity.ok()
-                    .body(new GenericResponse(true, "Delete Successful!", null, HttpStatus.OK.value()));
+                    .body(new GenericResponse(true, "Delete Successful!", null,
+                            HttpStatus.OK.value()));
         }
         // Khi không tìm thấy bài post với id
         else {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new GenericResponse(false, "Cannot found share post!", null, HttpStatus.NOT_FOUND.value()));
+                    .body(new GenericResponse(false, "Cannot found share post!", null,
+                            HttpStatus.NOT_FOUND.value()));
         }
     }
 
     @Override
-    public List<SharesResponse> findUserSharePosts(String currentUserId, String userId, Pageable pageable) {
-        List<PrivacyLevel> privacyLevels = Arrays.asList(PrivacyLevel.PUBLIC, PrivacyLevel.FRIENDS);
+    public List<SharesResponse> findUserSharePosts(String currentId ,String userId, Pageable pageable) {
+        List<PrivacyLevel> privacyLevels = List.of(PrivacyLevel.PUBLIC);
+        List<String> friendIds = friendClientService.getFriendIdsByUserId(userId);
+        if (friendIds == null) {
+            friendIds = new ArrayList<>();
+        }
+        if(friendIds.contains(currentId)){
+            privacyLevels = List.of(PrivacyLevel.PUBLIC, PrivacyLevel.FRIENDS);
+        }
+        if (currentId.equals(userId)) {
+            privacyLevels = List.of(PrivacyLevel.PUBLIC, PrivacyLevel.FRIENDS, PrivacyLevel.PRIVATE);
+        }
         List<Share> userSharePosts = shareRepository.findByUserIdAndPrivacyLevelInOrderByCreateAtDesc(userId,
                 privacyLevels, pageable);
         List<SharesResponse> sharesResponses = new ArrayList<>();
@@ -197,7 +187,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
             sharesResponses.add(sharesResponse);
         }
         return sharesResponses;
@@ -210,8 +201,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
         if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
             groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
         }
-        SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
-        return sharesResponse;
+        UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+        return new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
     }
 
     @Override
@@ -225,8 +216,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
-            return sharesResponse;
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            return new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
         });
     }
 
@@ -331,7 +322,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
             responses.add(sharesResponse);
         }
         return responses;
@@ -398,13 +390,10 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
         // Thời gian bắt đầu là thời điểm hiện tại trừ 1 tháng
         LocalDateTime startDate = now.minusMonths(1);
 
-        // Thời gian kết thúc là thời điểm hiện tại
-        LocalDateTime endDate = now;
-
         // Chuyển LocalDateTime sang Date (với ZoneId cụ thể, ở đây là
         // ZoneId.systemDefault())
         Date startDateAsDate = Date.from(startDate.atZone(ZoneId.systemDefault()).toInstant());
-        Date endDateAsDate = Date.from(endDate.atZone(ZoneId.systemDefault()).toInstant());
+        Date endDateAsDate = Date.from(now.atZone(ZoneId.systemDefault()).toInstant());
 
         // Truy vấn số lượng bài share post trong khoảng thời gian này
         return shareRepository.countByCreateAtBetween(startDateAsDate, endDateAsDate);
@@ -414,9 +403,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
     public long countSharesInOneYearFromNow() {
         LocalDateTime now = LocalDateTime.now();
         LocalDateTime startDate = now.minusYears(1);
-        LocalDateTime endDate = now;
         Date startDateAsDate = Date.from(startDate.atZone(ZoneId.systemDefault()).toInstant());
-        Date endDateAsDate = Date.from(endDate.atZone(ZoneId.systemDefault()).toInstant());
+        Date endDateAsDate = Date.from(now.atZone(ZoneId.systemDefault()).toInstant());
         return shareRepository.countByCreateAtBetween(startDateAsDate, endDateAsDate);
     }
 
@@ -424,9 +412,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
     public long countSharesInNineMonthsFromNow() {
         LocalDateTime now = LocalDateTime.now();
         LocalDateTime startDate = now.minusMonths(9);
-        LocalDateTime endDate = now;
         Date startDateAsDate = Date.from(startDate.atZone(ZoneId.systemDefault()).toInstant());
-        Date endDateAsDate = Date.from(endDate.atZone(ZoneId.systemDefault()).toInstant());
+        Date endDateAsDate = Date.from(now.atZone(ZoneId.systemDefault()).toInstant());
         return shareRepository.countByCreateAtBetween(startDateAsDate, endDateAsDate);
     }
 
@@ -434,9 +421,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
     public long countSharesInSixMonthsFromNow() {
         LocalDateTime now = LocalDateTime.now();
         LocalDateTime startDate = now.minusMonths(6);
-        LocalDateTime endDate = now;
         Date startDateAsDate = Date.from(startDate.atZone(ZoneId.systemDefault()).toInstant());
-        Date endDateAsDate = Date.from(endDate.atZone(ZoneId.systemDefault()).toInstant());
+        Date endDateAsDate = Date.from(now.atZone(ZoneId.systemDefault()).toInstant());
         return shareRepository.countByCreateAtBetween(startDateAsDate, endDateAsDate);
     }
 
@@ -507,8 +493,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
-            return sharesResponse;
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            return new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
         });
     }
 
@@ -526,8 +512,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
-            return sharesResponse;
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            return new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
         });
     }
 
@@ -555,7 +541,8 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, ownerPost,groupProfileResponse);
             sharesResponses.add(sharesResponse);
         }
         return sharesResponses;
@@ -564,16 +551,6 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
     @Override
     public ResponseEntity<GenericResponse> getTimeLineSharePosts(String userId, Integer page, Integer size) throws JsonProcessingException {
 
-        ObjectMapper objectMapper = new ObjectMapper();
-        String indexStr = String.valueOf(page)+ size + userId;
-        if (this.hashExists("sharesOfTimeLine", indexStr)) {
-            Object sharesTimeline = this.hashGet("sharesOfTimeLine", indexStr);
-            HashMap<String, Object> data = objectMapper.readValue((String) sharesTimeline, HashMap.class);
-            Object sharesTimelineObj = data.get("sharesOfTimeLine");
-            ArrayList<HashMap<String, Object>> sharesTimelineList = (ArrayList<HashMap<String, Object>>) sharesTimelineObj;
-            return ResponseEntity.ok(GenericResponse.builder().success(true).message("Retrieved user share posts successfully and access update from redis")
-                    .result(sharesTimelineList).statusCode(HttpStatus.OK.value()).build());
-        }
         UserProfileResponse user = userClientService.getUser(userId);
         if (user == null) {
             return ResponseEntity.ofNullable(GenericResponse.builder().success(false).message("User not found")
@@ -586,6 +563,9 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
         }
         userIds.add(userId);
         List<String> groupIds = groupClientService.getGroupIdsByUserId(userId);
+        if (groupIds == null) {
+            groupIds = new ArrayList<>();
+        }
         List<Share> userSharePosts = shareRepository.findSharePostsInTimeLine(userIds, groupIds, pageable);
         GroupProfileResponse groupProfileResponse = null;
 
@@ -595,35 +575,22 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
             UserProfileResponse userProfileResponse = userClientService.getUser(share.getUserId());
-            SharesResponse sharePostsResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            SharesResponse sharePostsResponse = new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
             simplifiedUserPosts.add(sharePostsResponse);
         }
-
-        HashMap<String, Object> response = new HashMap<>();
-        response.put("sharesOfTimeLine", simplifiedUserPosts);
-        String jsonData = objectMapper.writeValueAsString(response);
-        this.hashSet("sharesOfTimeLine", indexStr, jsonData);
-
         return ResponseEntity.ok(GenericResponse.builder().success(true).message("Retrieved user share posts successfully and access update")
                 .result(simplifiedUserPosts).statusCode(HttpStatus.OK.value()).build());
     }
 
     @Override
     public ResponseEntity<GenericResponse> getShareOfPostGroup(String userId, Integer page, Integer size) throws JsonProcessingException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        String indexStr = String.valueOf(page)+ size + userId;
-        if (this.hashExists("sharesOfGroup", indexStr)) {
-            Object sharesTimeline = this.hashGet("sharesOfGroup", indexStr);
-            HashMap<String, Object> data = objectMapper.readValue((String) sharesTimeline, HashMap.class);
-            Object sharesTimelineObj = data.get("sharesOfGroup");
-            ArrayList<HashMap<String, Object>> sharesTimelineList = (ArrayList<HashMap<String, Object>>) sharesTimelineObj;
-            return ResponseEntity.ok(GenericResponse.builder().success(true).message("Retrieved share post successfully from redis")
-                    .result(sharesTimelineList).statusCode(HttpStatus.OK.value()).build());
-        }
         if (userId == null)
             return ResponseEntity.badRequest().body(new GenericResponse(false, "User not found", null, 400));
         List<String> groupIds = groupClientService.getGroupIdsByUserId(userId);
         PageRequest pageable = PageRequest.of(page, size);
+        if (groupIds == null)
+            groupIds = new ArrayList<>();
         List<Share> shares = shareRepository.findAllSharesInUserGroups(groupIds, pageable);
         List<SharesResponse> sharesResponses = new ArrayList<>();
         for (Share share : shares) {
@@ -632,13 +599,10 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            SharesResponse sharesResponse = new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
             sharesResponses.add(sharesResponse);
         }
-        HashMap<String, Object> response = new HashMap<>();
-        response.put("sharesOfGroup", sharesResponses);
-        String jsonData = objectMapper.writeValueAsString(response);
-        this.hashSet("sharesOfGroup", indexStr, jsonData);
         return ResponseEntity.ok(GenericResponse.builder().success(true).message("Retrieved share post successfully")
                 .result(sharesResponses).statusCode(HttpStatus.OK.value()).build());
 
@@ -646,17 +610,7 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
 
     @Override
     public ResponseEntity<GenericResponse> getGroupSharePosts(String userId, String postGroupId, Integer page,
-                                                              Integer size) throws JsonProcessingException {
-        ObjectMapper objectMapper = new ObjectMapper();
-        String indexStr = String.valueOf(page)+ size + userId;
-        if (this.hashExists("sharesOfGroupJoin", indexStr)) {
-            Object sharesTimeline = this.hashGet("sharesOfGroupJoin", indexStr);
-            HashMap<String, Object> data = objectMapper.readValue((String) sharesTimeline, HashMap.class);
-            Object sharesTimelineObj = data.get("sharesOfGroupJoin");
-            ArrayList<HashMap<String, Object>> sharesTimelineList = (ArrayList<HashMap<String, Object>>) sharesTimelineObj;
-            return ResponseEntity.ok(GenericResponse.builder().success(true).message("Retrieved group share posts successfully from redis")
-                    .result(sharesTimelineList).statusCode(HttpStatus.OK.value()).build());
-        }
+                                                              Integer size)  {
         if (userId == null)
             return ResponseEntity.badRequest().body(new GenericResponse(false, "User not found", null, 400));
         PageRequest pageable = PageRequest.of(page, size);
@@ -668,13 +622,10 @@ public class ShareServiceImpl extends RedisServiceImpl implements ShareService {
             if (share.getPostGroupId() != null && !share.getPostGroupId().isEmpty()) {
                 groupProfileResponse = groupClientService.getGroup(share.getPostGroupId());
             }
-            SharesResponse shareResponse = new SharesResponse(share, userProfileResponse, groupProfileResponse);
+            UserProfileResponse ownerPost = userClientService.getUser(share.getPost().getUserId());
+            SharesResponse shareResponse = new SharesResponse(share, userProfileResponse,ownerPost, groupProfileResponse);
             sharesResponses.add(shareResponse);
         }
-        HashMap<String, Object> response = new HashMap<>();
-        response.put("sharesOfGroupJoin", sharesResponses);
-        String jsonData = objectMapper.writeValueAsString(response);
-        this.hashSet("sharesOfGroupJoin", indexStr, jsonData);
         return ResponseEntity.ok(GenericResponse.builder().success(true).message("Retrieved group share posts successfully")
                 .result(sharesResponses).statusCode(HttpStatus.OK.value()).build());
     }
